--- a/index.html
+++ b/index.html
@@ -33,52 +33,51 @@
                 </figure>
             </header>
         </div>
-        <hr>
         <div class="conteudo" id="filmes_exibicao">
-          <hr/>
             <aside>
-              <div class="film film-1">
-                  <figure>
-                      <img src="assets/img/ohobbit.jpg" height="200px"></img>
-                      <h2>Hobit</h2>
-                      <span>"The Hobbit" is a film trilogy directed by Peter Jackson, based on J.R.R. Tolkien's novel of the same name. The story follows hobbit Bilbo Baggins as he embarks on a quest with a group of dwarves to reclaim their homeland from the dragon Smaug. Along the way, they encounter various obstacles, including goblins, trolls, and a shape-shifting creature named Gollum. The trilogy stars Martin Freeman as Bilbo, Richard Armitage as Thorin Oakenshield, and Ian McKellen as Gandalf the Grey.</span>
-                      <table border="1">
-                        <tr>
-                          <th rowspan="2">Salas</th>
-                          <th colspan="3">Horários</th>
-                        </tr>
+              <div class="film">
+                <div class="film-1">
+                    <figure>
+                        <img src="assets/img/ohobbit.jpg" height="200px">
+                        </img>
+                        <h2>Hobit</h2>
+                        <span>"The Hobbit" is a film trilogy directed by Peter Jackson, based on J.R.R. Tolkien's novel of the same name. The story follows hobbit Bilbo Baggins as he embarks on a quest with a group of dwarves to reclaim their homeland from the dragon Smaug. Along the way, they encounter various obstacles, including goblins, trolls, and a shape-shifting creature named Gollum. The trilogy stars Martin Freeman as Bilbo, Richard Armitage as Thorin Oakenshield, and Ian McKellen as Gandalf the Grey.</span>
+                        <table border="1">
                           <tr>
-                              <th>08-10</th>
-                              <th>10-12</th>
-                              <th>12-14</th>
+                            <th rowspan="2">Salas</th>
+                            <th colspan="3">Horários</th>
                           </tr>
-                          <tr>
-                              <td>Sala1</td>
-                              <td></td>
-                              <td>X</td>
-                              <td></td>
-                          </tr>
-                          <tr>
-                              <td>Sala2</td>
-                              <td></td>
-                              <td>X</td>
-                              <td></td>
-                          </tr>
-                          <tr>
-                              <td>Sala3</td>
-                              <td>X</td>
-                              <td></td>
-                              <td>X</td>
-                          </tr>                      
-                      </table> 
-                    </figure>
-                  </div>
-                <hr/>
-                <div class="film film-2">
+                            <tr>
+                                <th>08-10</th>
+                                <th>10-12</th>
+                                <th>12-14</th>
+                            </tr>
+                            <tr>
+                                <td>Sala1</td>
+                                <td></td>
+                                <td>X</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Sala2</td>
+                                <td></td>
+                                <td>X</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Sala3</td>
+                                <td>X</td>
+                                <td></td>
+                                <td>X</td>
+                            </tr>                      
+                        </table> 
+                      </figure>
+                </div>
+                <div class="film-2">
                   <figure>
                     <img src="assets/img/harrypotter.jpg" height="200px"></img>
                     <h2>Harry poter</h2>
-                    <p>"Harry Potter and the Prisoner of Azkaban" is the third book in the Harry Potter series. In this book, Harry returns to Hogwarts School of Witchcraft and Wizardry for his third year. He discovers that Sirius Black, a dangerous wizard and follower of Lord Voldemort, has escaped from the wizarding prison of Azkaban and is believed to be hunting him. Along with his friends Ron and Hermione, Harry tries to uncover the truth behind Sirius Black's escape and prevent him from causing harm. They also learn about the existence of the mysterious and terrifying Dementors, who guard the prison and feed on human happiness. In the end, Harry discovers the shocking truth about his past and the connection between himself, Sirius Black, and his parents' deaths."
+                    <p>"Harry Potter and the Prisoner of Azkaban" is the third book in the Harry Potter series. In this book, Harry returns to Hogwarts School of Witchcraft and Wizardry for his third year. He discovers that Sirius Black, a dangerous wizard and follower of Lord Voldemort, has escaped from the wizarding prison of Azkaban and is believed to be hunting him. Along with his friends Ron and Hermione, Harry tries to uncover the truth behind Sirius Black's escape andh"
                     </p>
                     <table border="1">
                       <tr>
@@ -111,9 +110,83 @@
                     </table> 
                   </figure>
                 </div>
+                <div class="film-3"> 
+                  <figure>
+                    <img src="assets/img/harrypotter.jpg" height="200px"></img>
+                    <h2>Harry poter</h2>
+                    <p>"Harry Potter and the Prisoner of Azkaban" is the third book in the Harry Potter series. In this book, Harry returns to Hogwarts School of Witchcraft and Wizardry for his third year. He discovers that Sirius Black, a dangerous wizard and follower of Lord Voldemort, has escaped from the wizarding prison of Azkaban and is believed to be hunting him. Along with his friends Ron and Hermione, Harry tries to uncover the truth behind Sirius Black's escape andh"
+                    </p>
+                    <table border="1">
+                      <tr>
+                        <th rowspan="2">Salas</th>
+                        <th colspan="3">Horários</th>
+                      </tr>
+                        <tr>
+                            <th>08-10</th>
+                            <th>10-12</th>
+                            <th>12-14</th>
+                        </tr>
+                        <tr>
+                            <td>Sala1</td>
+                            <td>X</td>
+                            <td>X</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Sala2</td>
+                            <td></td>
+                            <td></td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Sala3</td>
+                            <td>X</td>
+                            <td></td>
+                            <td></td>
+                        </tr>                      
+                    </table> 
+                  </figure>
+                </div>
+                <div class="film-4">
+                  <figure>
+                    <img src="assets/img/harrypotter.jpg" height="200px"></img>
+                    <h2>Harry poter</h2>
+                    <p>"Harry Potter and the Prisoner of Azkaban" is the third book in the Harry Potter series. In this book, Harry returns to Hogwarts School of Witchcraft and Wizardry for his third year. He discovers that Sirius Black, a dangerous wizard and follower of Lord Voldemort, has escaped from the wizarding prison of Azkaban and is believed to be hunting him. Along with his friends Ron and Hermione, Harry tries to uncover the truth behind Sirius Black's escape andh"
+                    </p>
+                    <table border="1">
+                      <tr>
+                        <th rowspan="2">Salas</th>
+                        <th colspan="3">Horários</th>
+                      </tr>
+                        <tr>
+                            <th>08-10</th>
+                            <th>10-12</th>
+                            <th>12-14</th>
+                        </tr>
+                        <tr>
+                            <td>Sala1</td>
+                            <td>X</td>
+                            <td>X</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Sala2</td>
+                            <td></td>
+                            <td></td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Sala3</td>
+                            <td>X</td>
+                            <td></td>
+                            <td></td>
+                        </tr>                      
+                    </table> 
+                  </figure>
+                </div>
+              </div>
             </aside>
         </div>
-        <hr>
         <footer>
           <center>
             <h3>Powered by- Adryan, Wendril e Gabi-Todos os direitos reservados</h3>
