--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
       <nav class="menu">
           <header>
-            <img src="assets/img/logo.jpeg" height="60px"></img>
+            <img src="assets/img/logo.jpeg" height="60px" style="padding: 12px"></img>
           </header>
           <br>
           <ul>
@@ -23,56 +23,49 @@
             </li>
           </ul>
       </nav>
-        <div class="inicio">
-            <header>
-                <figure>
-                    <center>
-                        <img src="assets/img/logo.jpeg" height="300px"></img>
-                        <figcaption>Moremall, o shooping dos filmes!</figcaption>
-                    </center>
-                </figure>
-            </header>
-        </div>
+      <div class="inicio">
+        <img src="assets/img/fundo-filmes.jpeg" style="width:100%;filter:blur(1px);display: block;">
+        </img>
+      </div>
         <div class="conteudo" id="filmes_exibicao">
             <aside>
               <div class="film film-1">
-                  <figure>
-                     <img src="assets/img/ohobbit.jpg"></img>
-                    
-                      <div class="filmdescription">  
-                        <h2>Hobit</h2>
-                        <span>"The Hobbit" is a film trilogy directed by Peter Jackson, based on J.R.R. Tolkien's novel of the same name. The story follows hobbit Bilbo Baggins as he embarks on a quest with a group of dwarves to reclaim their homeland from the dragon Smaug. Along the way, they encounter various obstacles, including goblins, trolls, and a shape-shifting creature named Gollum. The trilogy stars Martin Freeman as Bilbo, Richard Armitage as Thorin Oakenshield, and Ian McKellen as Gandalf the Grey.</span>
-                        <table border="1">
+                <figure>
+                    <img src="assets/img/ohobbit.jpg"></img>
+                    <div class="filmdescription">  
+                      <h2>Hobit</h2>
+                      <span>"The Hobbit" is a film trilogy directed by Peter Jackson, based on J.R.R. Tolkien's novel of the same name. The story follows hobbit Bilbo Baggins as he embarks on a quest with a group of dwarves to reclaim their homeland from the dragon Smaug. Along the way, they encounter various obstacles, including goblins, trolls, and a shape-shifting creature named Gollum. The trilogy stars Martin Freeman as Bilbo, Richard Armitage as Thorin Oakenshield, and Ian McKellen as Gandalf the Grey.</span>
+                      <table border="1">
+                        <tr>
+                          <th rowspan="2">Salas</th>
+                          <th colspan="3">Horários</th>
+                        </tr>
                           <tr>
-                            <th rowspan="2">Salas</th>
-                            <th colspan="3">Horários</th>
+                              <th>08-10</th>
+                              <th>10-12</th>
+                              <th>12-14</th>
                           </tr>
-                            <tr>
-                                <th>08-10</th>
-                                <th>10-12</th>
-                                <th>12-14</th>
-                            </tr>
-                            <tr>
-                                <td>Sala1</td>
-                                <td></td>
-                                <td>X</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Sala2</td>
-                                <td></td>
-                                <td>X</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Sala3</td>
-                                <td>X</td>
-                                <td></td>
-                                <td>X</td>
-                            </tr>                      
-                        </table>
-                      </div> 
-                    </figure>
+                          <tr>
+                              <td>Sala1</td>
+                              <td></td>
+                              <td>X</td>
+                              <td></td>
+                          </tr>
+                          <tr>
+                              <td>Sala2</td>
+                              <td></td>
+                              <td>X</td>
+                              <td></td>
+                          </tr>
+                          <tr>
+                              <td>Sala3</td>
+                              <td>X</td>
+                              <td></td>
+                              <td>X</td>
+                          </tr>                      
+                      </table>
+                    </div> 
+                  </figure>
               </div>
               <div class="film film-2">
                 <figure>
