modificando imagens de fundo

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
           </ul>
       </nav>
         <div class="inicio">
-            <header>
-                <figure>
-                    <center>
-                        <img src="assets/img/logo.jpeg" height="300px"></img>
-                        <figcaption>Moremall, o shooping dos filmes!</figcaption>
-                    </center>
-                </figure>
-            </header>
+          <figure>
+              <center>
+                  <img src="assets/img/logo.jpeg" height="300px"></img>
+                  <figcaption>Seu shopping dos filmes!</figcaption>
+              </center>
+          </figure>
         </div>
         <div class="conteudo" id="filmes_exibicao">
             <aside>
