reformulando identidade visual do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
       <nav class="menu">
           <header>
-            <img src="assets/img/logo.jpeg" height="60px" style="padding: 12px"></img>
+            <img src="assets/img/logo_name.png" />
           </header>
           <br>
           <ul>
@@ -28,18 +28,19 @@
                 <figure>
                     <center>
                         <img src="assets/img/logo.jpeg" height="300px"></img>
-                        <figcaption>Moremall, o shooping dos filmes!</figcaption>
+                        <figcaption>Sua aventura começa aqui!</figcaption>
+                        <button> <b>ASSISTIR AGORA</b> <img src="assets/img/play.png"/> </button>
                     </center>
                 </figure>
             </header>
         </div>
         <div class="conteudo" id="filmes_exibicao">
             <aside>
-              <div class="film film-1">
+              <div class="film">
                 <figure>
                     <img src="assets/img/ohobbit.jpg"></img>
                     <div class="filmdescription">  
-                      <h2>Hobit</h2>
+                      <h2>Hobbit</h2>
                       <span>"The Hobbit" is a film trilogy directed by Peter Jackson, based on J.R.R. Tolkien's novel of the same name. The story follows hobbit Bilbo Baggins as he embarks on a quest with a group of dwarves to reclaim their homeland from the dragon Smaug. Along the way, they encounter various obstacles, including goblins, trolls, and a shape-shifting creature named Gollum. The trilogy stars Martin Freeman as Bilbo, Richard Armitage as Thorin Oakenshield, and Ian McKellen as Gandalf the Grey.</span>
                       <table border="1">
                         <tr>
@@ -73,7 +74,7 @@
                     </div> 
                   </figure>
               </div>
-              <div class="film film-2">
+              <div class="film">
                 <figure>
                   <img src="assets/img/harrypotter.jpg"></img>
                   <div class="filmdescription">
@@ -112,7 +113,7 @@
                   </div>
                 </figure>
               </div>
-              <div class="film film-3"> 
+              <div class="film"> 
                 <figure>
                   <img src="assets/img/harrypotter.jpg" height="200px"></img>
                   
@@ -152,7 +153,7 @@
                   </div> 
                 </figure>
               </div>
-              <div class="film film-4">
+              <div class="film">
                 <figure>
                   <img src="assets/img/harrypotter.jpg" height="200px"></img>
                   <div class="filmdescription">  
