--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
           </ul>
       </nav>
         <div class="inicio">
-            <header>
-                <figure>
-                    <center>
-                        <img src="assets/img/logo.jpeg" height="300px"></img>
-                        <figcaption>Sua aventura começa aqui!</figcaption>
-                        <button> <b>ASSISTIR AGORA</b> <img src="assets/img/play.png"/> </button>
-                    </center>
-                </figure>
-            </header>
+            <div class="logo-site">
+              <figure class="img-inicio">
+                <img src="assets/img/logo.jpeg" height="300px"></img>
+                <figcaption>Sua aventura começa aqui!</figcaption>
+                <button><b>ASSISTIR AGORA</b> <img src="assets/img/play.png"/></button>
+              </figure>
+            </div>
         </div>
         <div class="conteudo" id="filmes_exibicao">
             <aside>
